--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,10 +24,10 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AgendaTelefonicaConBDModoTexto.jar
+dist.jar=${dist.dir}/AgendaTelefonicaConBDInterface.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar=../../../../../Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
